# cci_data_bridge

./: .project  .pydevproject  LICENSE  MANIFEST.in  README.md  manage.py  openAPI.yaml  pyproject.toml  requirements.txt  setup.py
cci_data_bridge/: admin.py  asgi.py  local_settings.py.ini  models.py  settings.py  urls.py  views.py  wsgi.py
cci_data_bridge/management/commands/: import_spreadsheet.py
cci_data_bridge/static/cci_data_bridge/: openAPI.yaml
cci_data_bridge/templates/: api_doc.html  base.html  home.html  relationtype_list.html  sankey.html
cci_data_bridge/templates/data_bridge_app/: dataset_detail.html  dataset_list.html  project_list.html
cci_data_bridge_templates/templates/cci_data_bridge/: api_doc.html  dataset_detail.html  home.html  sankey.html
data_bridge_app/: apps.py  models.py  urls.py  views.py
data_bridge_app/migrations/: 0001_initial.py
docs/: index.html
static/: style.css
templates/cci_data_bridge/: api_doc.html  base.html  dataset_detail.html  dataset_list.html  project_list.html  relationtype_list.html  sankey.html
